<resources>
    <string name="app_name">Zao</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Zao</string>
    <string name="nav_header_subtitle">zsky@live.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_diary">日记</string>
    <string name="action_query">查询</string>
    <string name="action_settings">设置</string>
    <string name="action_about">关于</string>

    <string name="app_tab_home">首页</string>
    <string name="app_tab_status">广播</string>
    <string name="app_tab_group">小组</string>
    <string name="app_tab_profile">我的</string>

    <string name="toGrid">Grid</string>

    <string name="okhttp_zero">登录</string>
    <string name="okhttp_one">列表</string>
    <string name="okhttp_two">排行榜</string>


    <string name="edittext_writediary_hint">今天，我写了一篇日记。。。</string>
    <string name="dialog_message">你的内容为空，请写下你的日记。\n Email : sunedo@qq.com \n主页 ：www.onezao.com\n淘宝 ：http://fone.taobao.com \n豆瓣 ：https://site.douban.com/273850/</string>
    <string name="dialog_message2">你的内容为空，请写下你的日记。 Email : sunedo@qq.com     主页 ：www.onezao.com   淘宝 ：http://fone.taobao.com 豆瓣 ：https://site.douban.com/273850/</string>
    <string name="handle_time">60</string>
    <string name="alpha">透明</string>
    <string name="rotate">旋转</string>
    <string name="scale">缩放</string>
    <string name="translate">平移</string>
    <string name="animset">组合</string>
    <string name="paintcolor">Color.BLUE</string>
    <string name="paintsize">16</string>
    <string name="btn_writediary_save">保存</string>
    <string name="picpath">/ame/body.jpg</string>
    <string name="htmlpic">图片</string>
    <string name="action_broadcast">com.onezao.broadcast.action</string>
    <string name="broacast">广播</string>
    <string name="app_notice">key  和   action  不可以改变，一旦设定好，就固定了。广播接收者根据这个设定来接收广播</string>
    <string name="start">开始</string>
    <string name="stop">结束</string>

    <string name="scan_barcode_title">条形码扫描</string>
    <string name="scan_qrcode_title">二维码扫描</string>
    <string name="scan_allcode_title">二维码或条形码扫描</string>
    <string name="scan_barcode_hint">将条形码对入取景框，即可自动扫描</string>
    <string name="scan_qrcode_hint">将二维码对入取景框，即可自动扫描</string>
    <string name="scan_allcode_hint">将二维码或条形码对入取景框，即可自动扫描</string>

    <string name="title_version_update">关于</string>
    <string name="btn_version_update">更新</string>

    <string name="screen_record">录屏</string>
    <string name="start_record">开始录屏</string>
    <string name="stop_record">停止录屏</string>


    <string name="btn1_description">Start foreground service</string>
    <string name="btn1_title" >Start</string>
    <string name="simple_service_title">Simple Service</string>
    <string name="simple_service_desc">Simple Service from the OTest app</string>

    <string name="main_create_noti2_btn">Send</string>

    <string name="btnA_title">Go to Settings</string>
    <string name="noti_channel_default">Primary Channel</string>
    <string name="noti1_title">Notification 1 Title</string>
    <string name="primary1_body">The content</string>
    <string name="noti2_title">Second notification</string>
    <string name="secondary1_body">Notification body text.</string>
    <string name="noti_channel_second">Secondary Channel</string>

    <string name="main_primary_title">Primary Channel</string>
    <string name="main_primary_send1">Send 1</string>
    <string name="main_primary_send2">Send 2</string>
    <string name="main_primary_config">Go to primary settings</string>

    <string name="main_secondary_title">Secondary Channel</string>
    <string name="main_secondary_send1">Send 1</string>
    <string name="main_secondary_send2">Send 2</string>
    <string name="main_secondary_config">Go to secondary settings</string>
    <string name="primary2_body">Second Notification for Primary Channel</string>
    <string name="secondary2_body">Second Notification for Secondary Channel</string>

</resources>
