<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_sendbroadcast_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="value"/>

    <Button 
        android:id="@+id/btn_sendbroadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/broacast"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_notice"/>
    <EditText
        android:id="@+id/et_sendbroadcast_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="key"/>
    <EditText
        android:id="@+id/et_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_broadcast"/>
</LinearLayout>
