<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_okhttp_0626"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:text="@string/app_name"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_okhttp_zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okhttp_zero"/>
        <Button
            android:id="@+id/btn_okhttp_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okhttp_one"/>
        <Button
            android:id="@+id/btn_okhttp_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okhttp_two"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_code_0626"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"/>
            <TextView
                android:id="@+id/tv_message_0626"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"/>

            <TextView
                android:id="@+id/tv_body_0626"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:saveEnabled="true"
                android:text="@string/app_name"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

